@@ -7,8 +7,8 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.test.context.TestPropertySource;
 import org.springframework.transaction.annotation.Transactional;
-import ru.practicum.shareit.booking.dto.BookingDtoRequestCreate;
 import ru.practicum.shareit.booking.service.impl.BookingServiceImpl;
+import ru.practicum.shareit.exceptions.exemption.AuthorizationException;
 import ru.practicum.shareit.exceptions.exemption.NotFoundException;
 import ru.practicum.shareit.item.dao.ItemRepository;
 import ru.practicum.shareit.item.dto.*;
@@ -18,7 +18,7 @@ import ru.practicum.shareit.user.dto.UserDtoRequestCreate;
 import ru.practicum.shareit.user.dto.UserDtoResponse;
 import ru.practicum.shareit.user.service.UserService;
 
-import java.time.LocalDateTime;
+import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
@@ -46,8 +46,8 @@ class ItemServiceImplIntegrationTest {
     @Autowired
     private BookingServiceImpl bookingServiceImpl;
 
-    private UserDtoResponse userResponse;
-    private ItemDtoResponseSeek itemResponse;
+    private UserDtoResponse userDtoResponse;
+    private ItemDtoResponse itemDtoResponse;
 
     @BeforeEach
     void setUp() {
@@ -55,14 +55,14 @@ class ItemServiceImplIntegrationTest {
                 .name("test user")
                 .email("test@example.com")
                 .build();
-        userResponse = userService.add(createUserRequest);
+        userDtoResponse = userService.add(createUserRequest);
 
         ItemDtoRequestCreate createItemRequest = ItemDtoRequestCreate.builder()
                 .name("test item")
                 .description("item description")
                 .available(true)
                 .build();
-        //   itemResponse = itemService.add(userResponse.getId(), createItemRequest);
+        itemDtoResponse = itemService.add(userDtoResponse.getId(), createItemRequest);
     }
 
     @Test
@@ -73,7 +73,7 @@ class ItemServiceImplIntegrationTest {
                 .available(true)
                 .build();
 
-        ItemDtoResponse newItemResponse = itemService.add(userResponse.getId(), createItemRequest);
+        ItemDtoResponse newItemResponse = itemService.add(userDtoResponse.getId(), createItemRequest);
 
         assertThat(newItemResponse.getId()).isNotNull();
         assertThat(newItemResponse.getName()).isEqualTo("new item");
@@ -98,30 +98,31 @@ class ItemServiceImplIntegrationTest {
                 .isInstanceOf(NotFoundException.class);
     }
 
-    /*
-        @Test
-        void shouldUpdateItem() {
-            ItemDtoRequestUpdate updateItemRequest = ItemDtoRequestUpdate.builder()
-                    .name("updated item")
-                    .description("updated item description")
-                    .available(false)
-                    .build();
 
-            ItemDtoResponse updatedItemResponse = itemService.update(itemResponse.getId(), updateItemRequest, userResponse.getId());
+    @Test
+    void shouldUpdateItem() {
+        ItemDtoRequestUpdate updateItemRequest = ItemDtoRequestUpdate.builder()
+                .name("updated item")
+                .description("updated item description")
+                .available(false)
+                .build();
 
-            assertThat(updatedItemResponse.getId()).isEqualTo(itemResponse.getId());
-            assertThat(updatedItemResponse.getName()).isEqualTo("updated item");
-            assertThat(updatedItemResponse.getDescription()).isEqualTo("updated item description");
-            assertThat(updatedItemResponse.getAvailable()).isFalse();
-        }*/
-/*
+        ItemDtoResponse updatedItemResponse = itemService.update(userDtoResponse.getId(), itemDtoResponse.getId(), updateItemRequest);
+        System.out.println(updatedItemResponse);
+
+        assertThat(updatedItemResponse.getId()).isEqualTo(itemDtoResponse.getId());
+        assertThat(updatedItemResponse.getName()).isEqualTo("updated item");
+        assertThat(updatedItemResponse.getDescription()).isEqualTo("updated item description");
+        assertThat(updatedItemResponse.getAvailable()).isFalse();
+    }
+
     @Test
     void shouldThrowAuthorizationExceptionWhenUpdatingItemWithWrongOwner() {
         UserDtoRequestCreate createUserRequest = UserDtoRequestCreate.builder()
                 .name("test user")
                 .email("test2@example.com")
                 .build();
-        userResponse = userService.add(createUserRequest);
+        userDtoResponse = userService.add(createUserRequest);
 
         ItemDtoRequestUpdate updateItemRequest = ItemDtoRequestUpdate.builder()
                 .name("updated item")
@@ -129,75 +130,78 @@ class ItemServiceImplIntegrationTest {
                 .available(false)
                 .build();
 
-        assertThatThrownBy(() -> itemService.update(itemResponse.getId(), updateItemRequest, userResponse.getId()))
+        assertThatThrownBy(() -> itemService.update(userDtoResponse.getId(), itemDtoResponse.getId(), updateItemRequest))
                 .isInstanceOf(AuthorizationException.class);
     }
 
 
     @Test
     void shouldFindItemById() {
-        ItemDtoResponse foundItem = itemService.get(itemResponse.getId());
+        Item foundItem = itemService.getById(itemDtoResponse.getId());
 
-        assertThat(foundItem.getId()).isEqualTo(itemResponse.getId());
+        assertThat(foundItem.getId()).isEqualTo(itemDtoResponse.getId());
         assertThat(foundItem.getName()).isEqualTo("test item");
         assertThat(foundItem.getDescription()).isEqualTo("item description");
         assertThat(foundItem.getAvailable()).isTrue();
     }
-*/
+
     @Test
     void shouldThrowNotFoundExceptionWhenItemNotFound() {
         assertThatThrownBy(() -> itemService.getById(999L))
                 .isInstanceOf(NotFoundException.class);
     }
-/*
+
     @Test
     void shouldFindAllUserItems() {
-        List<ItemDtoResponseSeek> userItems = itemService.get(userResponse.getId());
+        List<ItemDtoResponseSeek> userItems = itemService.get(userDtoResponse.getId());
 
         assertThat(userItems).hasSize(1);
-        assertThat(userItems.get(0).getName()).isEqualTo("test item");
-        assertThat(userItems.get(0).getDescription()).isEqualTo("item description");
-        assertThat(userItems.get(0).getAvailable()).isTrue();
+        assertThat(userItems.getFirst().getName()).isEqualTo("test item");
+        assertThat(userItems.getFirst().getDescription()).isEqualTo("item description");
+        assertThat(userItems.getFirst().getAvailable()).isTrue();
     }
 
     @Test
     void shouldSearchItems() {
         List<ItemDtoResponse> foundItems = itemService.getByString("test");
-
+        System.out.println(foundItems);
+        System.out.println(itemService.getById(1L));
         assertThat(foundItems).hasSize(1);
-        assertThat(foundItems.get(0).getName()).isEqualTo("test item");
-        assertThat(foundItems.get(0).getDescription()).isEqualTo("item description");
-        assertThat(foundItems.get(0).getAvailable()).isTrue();
-    }*/
-
-    @Test
-    void shouldAddComment() {
-        CommentDtoRequestCreate createCommentRequest = CommentDtoRequestCreate.builder()
-                .text("test comment")
-                .build();
-
-        BookingDtoRequestCreate createBookingRequest = BookingDtoRequestCreate.builder()
-                .itemId(itemResponse.getId())
-                .start(LocalDateTime.now())
-                .end(LocalDateTime.now())
-                .build();
-
-        bookingServiceImpl.createBooking(createBookingRequest, userResponse.getId());
-
-        CommentDtoResponse commentResponse = itemService.addComment(createCommentRequest, itemResponse.getId(), userResponse.getId());
-
-        assertThat(commentResponse.getText()).isEqualTo("test comment");
-        assertThat(commentResponse.getAuthorName()).isEqualTo("test user");
-        assertThat(commentResponse.getItem().getName()).isEqualTo("test item");
+        assertThat(foundItems.getFirst().getName()).isEqualTo("test item");
+        assertThat(foundItems.getFirst().getDescription()).isEqualTo("item description");
+        assertThat(foundItems.getFirst().getAvailable()).isTrue();
     }
 
+    /*
+        @Test
+        void shouldAddComment() {
+            CommentDtoRequestCreate createCommentRequest = CommentDtoRequestCreate.builder()
+                    .text("test comment")
+                    .build();
+
+            BookingDtoRequestCreate createBookingRequest = BookingDtoRequestCreate.builder()
+                    .itemId(itemDtoResponse.getId())
+                    .start(LocalDateTime.now())
+                    .end(LocalDateTime.now().plusMinutes(1))
+                    .build();
+
+            bookingServiceImpl.createBooking(createBookingRequest, userDtoResponse.getId());
+
+            CommentDtoResponse commentResponse = itemService.addComment(createCommentRequest, itemDtoResponse.getId(), userDtoResponse.getId());
+
+            assertThat(commentResponse.getText()).isEqualTo("test comment");
+            assertThat(commentResponse.getAuthorName()).isEqualTo("test user");
+            assertThat(commentResponse.getItem().getName()).isEqualTo("test item");
+        }
+    */
     @Test
     void shouldThrowValidationExceptionWhenAddingCommentWithoutBooking() {
         CommentDtoRequestCreate createCommentRequest = CommentDtoRequestCreate.builder()
                 .text("test comment")
                 .build();
 
-        assertThatThrownBy(() -> itemService.addComment(createCommentRequest, itemResponse.getId(), userResponse.getId()))
+        assertThatThrownBy(() -> itemService.addComment(createCommentRequest, itemDtoResponse.getId(), userDtoResponse.getId()))
                 .isInstanceOf(ValidationException.class);
     }
+
 }
